--- a/SPEApp/app/src/main/res/values/strings.xml
+++ b/SPEApp/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SPEProject</string>
+    <string name="app_name">SPEApp</string>
     <string name="title_activity_maps">Map</string>
 </resources>
