--- a/SPEProjectV2/app/src/main/res/values/strings.xml
+++ b/SPEProjectV2/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_main2">Main2Activity</string>
+    <string name="cam_toast">SWOOSH!</string>
 </resources>
