amended photo tag/comments screen layout

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,10 +5,16 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="cam_toast">SWOOSH!</string>
 
-
     <string name="choose_tag">Choose a tag</string>
     <string-array name="tags">
-        <item>Rubbish</item>
-        <item>Oil Spill</item>
+        <item>Bank erosion (cattle poaching)</item>
+        <item>Bank erosion (dog sliding)</item>
+        <item>Overshading</item>
+        <item>Undershaded</item>
+        <item>Unfenced</item>
+        <item>Obstructions</item>
+        <item>Visbale signs of pollution</item>
+        <item>Lack of "buffer zone"</item>
+        <item>Invasive species</item>
     </string-array>
 </resources>
