changed grid loading to AsyncTask. Added new backgroud to Splash screen

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
         <item>Undershaded</item>
         <item>Unfenced</item>
         <item>Obstructions</item>
-        <item>Visbale signs of pollution</item>
+        <item>Visible signs of pollution</item>
         <item>Lack of "buffer zone"</item>
         <item>Invasive species</item>
     </string-array>
