Implement Photo Data Fragment

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="drawer_images">Show Images</string>
     <string name="drawer_info">How it Works</string>
 
+    <string name="photo_comment">Comment: </string>
+    <string name="photo_tag">Tags: </string>
+    <string name="photo_item_descriptor">Image of Observation</string>
+
     <string name="info_title"><b>MyRivers™ v1.0</b></string>
     <string name="info_subtitle">\u00A9 BitBusters 2017</string>
     <string name="info_spvText">
