--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -35,6 +35,9 @@
     <string name="wims_table_date">Date</string>
     <string name="wims_table_type">Type</string>
 
+    <string name="permit_table_type">Permit Type: </string>
+    <string name="permit_table_date">Effective Date: </string>
+
     <string name="info_title"><b>myRivers™ v1.1</b></string>
     <string name="info_description">myRivers allows anyone to submit and browse photos of
         interesting wildlife observations and pollution incidents. It also provides useful
