--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,12 +8,12 @@
 
     <string name="drawer_cde">CDE Data</string>
     <string name="drawer_wims">WIMS Data</string>
-    <string name="drawer_images">Images</string>
+    <string name="drawer_permit">Discharge Permits Data</string>
     <string name="drawer_info">How it Works</string>
 
     <string name="layer_cde">CDE Layer</string>
     <string name="layer_wims">WIMS Layer</string>
-    <string name="layer_image">Images Layer</string>
+    <string name="layer_permit">Discharge Permit Layer</string>
 
     <string name="photo_comment">Comment: </string>
     <string name="photo_tag">Tags: </string>
