--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="button_desc_hamburger">Hamburger Button</string>
 
     <string name="cde_loading_message">Loading ratings data...</string>
+    <string name="cde_info_button">   More Info</string>
     <string name="cde_table_classification_value">Rating</string>
     <string name="cde_table_classification_year">Year</string>
     <string name="cde_table_classification_certainty">Certainty</string>
