--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -23,13 +23,22 @@
     <string name="button_desc_hamburger">Hamburger Button</string>
 
     <string name="cde_loading_message">Loading ratings data...</string>
-    <string name="cde_info_button">   More Info</string>
+    <string name="cde_info_button">More Info</string>
     <string name="cde_table_classification_value">Rating</string>
     <string name="cde_table_classification_year">Year</string>
     <string name="cde_table_classification_certainty">Certainty</string>
     <string name="cde_table_overall">Overall</string>
     <string name="cde_table_ecological">Ecological</string>
     <string name="cde_table_chemical">Chemical</string>
+    <string name="cde_classification_title">Classification</string>
+    <string name="cde_rnag_title">Reasons for not achieving good</string>
+    <string name="cde_objectives_title">Objectives</string>
+
+    <string name="cde_table_rnag_element">Element</string>
+    <string name="cde_table_rnag_rating">Rating</string>
+    <string name="cde_table_rnag_activity">Activity</string>
+    <string name="cde_table_rnag_year">Year</string>
+    <string name="cde_table_rnag_category">Category</string>
 
     <string name="wims_table_determinand">Determinand</string>
     <string name="wims_table_result">Result</string>
