--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="cde_table_chemical">Chemical</string>
     <string name="cde_classification_title">Classification</string>
     <string name="cde_rnag_title">Reasons for not achieving good</string>
-    <string name="cde_objectives_title">Objectives</string>
+    <string name="cde_objectives_title">Objectives and Predictions</string>
 
     <string name="cde_table_rnag_element">Element</string>
     <string name="cde_table_rnag_rating">Rating</string>
