--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -23,7 +23,8 @@
     <string name="photo_date">Date Taken: </string>
     <string name="photo_item_descriptor">Image of Observation</string>
 
-    <string name="button_desc_hamburger">Hamburger Button</string>
+    <string name="button_desc_hamburger">Menu</string>
+    <string name="button_desc_search">Search</string>
 
     <string name="cde_loading_message">Loading ratings data...</string>
     <string name="cde_table_classification_value">Rating</string>
