--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="drawer_cde">CDE Data</string>
     <string name="drawer_wims">WIMS Data</string>
     <string name="drawer_permit">Discharge Permits Data</string>
+    <string name="drawer_my_area">My Area</string>
     <string name="drawer_info">How it Works</string>
 
     <string name="layer_cde">CDE Layer</string>
@@ -84,4 +85,7 @@
         <b>Discharge Permit Layer</b>: Displays locations of water discharge permit points along
         with the holders name, type of permit and type of site.
     </string>
+
+    <string name="my_area_title"><b>My Area</b></string>
+    <string name="my_area_description"></string>
 </resources>
