--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="choose_tag">Choose a tag</string>
 
     <string name="drawer_cde">River Catchment Quality</string>
-    <string name="drawer_wims">Water Quality</string>
+    <string name="drawer_wims">Water Quality Samples</string>
     <string name="drawer_permit">Pollution Licence Holders</string>
     <string name="drawer_my_area">Where am I now?</string>
     <string name="drawer_info">How it Works</string>
@@ -70,7 +70,7 @@
     <string name="info_description">myRivers allows anyone to browse detailed river pollution
         reports in the UK. The available data is pulled and filtered from three different data sets,
         all provided by the Environment Agency.</string>
-    <string name="info_subtitle">\u00A9 BitBusters 2017</string>
+    <string name="info_subtitle">Developed by BitBusters and Epimorphics</string>
     <string name="info_home_buttons">Home Buttons: </string>
     <string name="info_layers">Layers: </string>
     <string name="info_gpsText">
