--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -96,8 +96,8 @@
     <string name="my_area_operational">Operational Catchment:</string>
     <string name="my_area_management">Management Catchment:</string>
     <string name="my_area_district">River Basin District:</string>
-    <string name="my_area_permit_button">Show the Nearest\nPollution Licence\nHolder on the Map</string>
-    <string name="my_area_wims_button">Show the Nearest\nWater Quality\nSample on the Map</string>
+    <string name="my_area_permit_button">Show the Nearest\nPollution Licence\nHolder on the Map\n(%.2f km away)</string>
+    <string name="my_area_wims_button">Show the Nearest\nWater Quality\nSample on the Map\n(%.2f km away)</string>
 
     <string name="google_search_back_button">Navigate up</string>
     <string name="google_search_cancel_button">Clear search</string>
