--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -119,7 +119,8 @@
 
     <string name="dialog_do_not_show_again">Do not show again</string>
 
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <!--Testing Only-->
     <string name="bristol_airport">Bristol Airport</string>
+    
 </resources>
